<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Chat App</string>
    <string name="login">Đăng nhập bằng số điện thoại</string>
    <string name="logout">Đăng xuất</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_login">Đăng nhập thôi nào</string>
    <string name="or">Or</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="chinh_sach">Khi đăng nhập, bạn đồng ý với <u>Điều khoản</u> và <u>Chính sách Quyền riêng tư</u> của chúng tôi</string>
    <string name="dang_ky"><u>Tạo tài khoản mới</u></string>
    <string name="todo">TODO</string>
    <string name="login_facebook">Đăng nhập bằng facebook</string>
    <string name="su_co_login"><u>Sự cố đăng nhập?</u></string>
    <string name="your_phone_number">Nhập số điện thoại</string>
    <string name="your_password">Nhập mật khẩu</string>
    <string name="login_now">Đăng nhập nè</string>
    <string name="dien_thieu_infor">Vui lòng nhập đầy đủ thông tin nhé bạn!</string>

    //string for facebook
    <string name="facebook_app_id">2909416592435360</string>
    <string name="fb_login_protocol_scheme">fb2909416592435360</string>
    <string name="infor_user">Cập nhật thông tin</string>
    <string name="nhap_ten">Tên của bạn</string>
    <string name="birthday">Sinh nhật của bạn</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="commit">Đồng ý</string>
    <string name="nhap_infor_success">à ha, lộ hết thông tin rồi nhé.</string>
    <string name="drawer_item_home">home</string>
    <string name="drawer_item_settings">Cài đặt</string>
    <string name="about">Thông tin về 5Love</string>
    <string name="error">Đã xảy ra sự cố!</string>
    <string name="drawer_mini_game">Mini game</string>
    <string name="default_user_name">Anonymous</string>
    <string name="default_user_description">Kết bạn với mình nha.</string>
    <string name="chat">Chat</string>
    <string name="drawer_chat">Chat</string>
    <string name="drawer_about">About 5 Love</string>
    <string name="ok">Done!</string>


    // string array
    <string-array name="advice">
        <item tools:ignore="TypographyEllipsis,Typos">Mọi thứ... đơn thuần chỉ là chia sẻ và thấu hiểu... hạnh phúc sẽ là mãi mãi.</item>
        <item>Anh ơi có cháy này! Cháy trong tim em!</item>
        <item>Thật dễ dàng để quen với một người xa lạ. Nhưng lại khó khăn biết mấy để xa lại với một người đã từng thân quen.</item>
        <item>Anh gì ơi? Anh đánh rơi người yêu này!</item>
        <item>Người nắm tay ta theo ta nửa đời phiêu dạt \nTa hôn mắt nàng che nàng nửa kiếp lênh đênh.</item>
        <item>Vai anh khi có đầu em tựa. Cân cả buồn vui của cuộc đời.</item>
        <item>Với thế giới, bạn có thể chỉ là một người, nhưng với một người, bạn có thể là cả thế giới.</item>
        <item>Anh có mỏi chân không khi cứ lượn mãi trong tâm trí em thế?</item>
        <item>Tình yêu là trạng thái mà khi đó hạnh phúc của một người khác trở nên cực kỳ quan trọng đối với hạnh phúc của bạn.</item>

    </string-array>
</resources>
