<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/nav_home"
    tools:ignore="UnusedNavigation">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.app.navigation.home.HomeFragment"
        android:label="@string/drawer_item_home"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/action_nav_home_self"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.app.navigation.setting.SettingFragment"
        android:label="@string/drawer_item_settings"
        tools:layout="@layout/setting_fragment" />
    <fragment
        android:id="@+id/nav_mini_game"
        android:name="com.app.navigation.minigame.MiniGameFragment"
        android:label="@string/drawer_mini_game"
        tools:layout="@layout/home_fragment" />
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.app.navigation.chat.ChatFragment"
        android:label="@string/drawer_chat"
        tools:layout="@layout/chat_fragment" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.app.navigation.about.AboutFragment"
        android:label="@string/drawer_about"
        tools:layout="@layout/about_fragment" />


</navigation>