<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog">


    <Button
        android:id="@+id/btn_login_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_state"
        android:fontFamily="cursive"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/login_now"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/su_co_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pass"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <blink
        android:id="@+id/blink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/edt_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/welcome_login"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="44dp" />
    </blink>

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/stroke"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_phone"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/stroke"
        android:drawableStart="@drawable/ic_contact_phone_black_24dp"
        android:ems="10"
        android:hint="@string/your_phone_number"
        android:inputType="phone"
        android:padding="5dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/edt_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/su_co_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/su_co_login"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_now" />

</androidx.constraintlayout.widget.ConstraintLayout>